# imapsieved

./: .gitignore  Cargo.toml  devenv.nix  flake.nix  go.mod  go.sum  imapsieved.nix  rust-toolchain.toml
build-aux/nix/: default.nix
cmd/gosieve-runner/: main.go
internal/brain/: brain.go
internal/sieve/: filters.go
