[package]
name = "imapsieved"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
daemonize = "0.5.0"
imap = { version = "3.0.0-alpha.14", default-features = false, git = "https://github.com/jonhoo/rust-imap", features = ["rustls-tls"], rev = "8f3e678ee33caf39c6ec6135a2a79b192ca56620" }
sieve-rs = "0.5.1"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
