[package]
name = "imapsieved"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.5"
config = { version = "0.15.14", features = ["toml"] }
daemonize = "0.5.0"
email = "0.0.21"
imap = "2.4.1"
sieve-rs = "0.7.0"
thiserror = "2.0.15"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
